fix ublock menu not showing properly

--- a/userChrome.css
+++ b/userChrome.css
@@ -2,7 +2,7 @@ TabsToolbar {
   visibility: collapse;
 }
 
-:root:not([customizing]) #navigator-toolbox:not(:focus-within) {
+:root:not([customizing]) #navigator-toolbox:not(:hover):not(:focus-within) {
   max-height: 1px;
   min-height: calc(0px);
   overflow: hidden;
